--- a/src/components/ui/sidebar/Sidebar.scss
+++ b/src/components/ui/sidebar/Sidebar.scss
@@ -1,62 +1,68 @@
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  padding-top: 20px;
+  border: 1px solid #cacaca;
+  background: #ffffff;
+  width: 96px;
+  border-radius: 16px;
+  position: relative;
+  transition: width 0.3s ease;
+
+  &.dashboard {
+    &:hover {
+      width: 240px !important;
+      position: absolute;
+      backdrop-filter: blur(8px);
+      /* Apply blur effect */
+      -webkit-backdrop-filter: blur(8px);
+
+      /* For Safari */
+      a .label {
+        display: inline;
+      }
+    }
+  }
+
+  a {
     display: flex;
-    flex-direction: column;
-    padding-top: 20px;
-    border: 1px solid #CACACA;
-    background: #FFFFFF;
-    width: 96px;
-    border-radius: 16px;
+    text-decoration: none;
+    color: #6a0dad;
+    font-size: 24px;
+    margin: 20px 0;
     position: relative;
-    transition: width 0.3s ease;
+    padding-left: 27px;
 
-    &.dashboard {
-        &:hover {
-            width: 240px !important;
-            position: absolute;
-            backdrop-filter: blur(8px);
-            /* Apply blur effect */
-            -webkit-backdrop-filter: blur(8px);
-
-            /* For Safari */
-            a .label {
-                display: inline;
-            }
-        }
+    img {
+      margin-right: 10px;
     }
 
-    a {
-        display: flex;
-        text-decoration: none;
-        color: #6a0dad;
-        font-size: 24px;
-        margin: 20px 0;
-        position: relative;
-        padding-left: 27px;
-
-        img {
-            margin-right: 10px;
-        }
-
-        .label {
-            display: none;
-            font-size: 14px;
-            color: #000000;
-            white-space: nowrap;
-            font-size: 20px;
-            font-weight: 400;
-            line-height: 25px;
-            text-align: left;
-            position: relative;
-            top: 8px;
-        }
-
-        &.active {
-            color: #3c1053;
-        }
+    .label {
+      display: none;
+      font-size: 14px;
+      color: #000000;
+      white-space: nowrap;
+      font-size: 20px;
+      font-weight: 400;
+      line-height: 25px;
+      text-align: left;
+      position: relative;
+      top: 8px;
     }
 
-    .settings {
-        position: absolute;
-        bottom: 20px;
+    &.active {
+      color: #3c1053;
     }
+  }
+
+  .settings {
+    position: absolute;
+    bottom: 20px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .sidebar {
+    display: none;
+  }
 }
