--- a/src/pages/(loggedIn)/donation/DonorDetails.scss
+++ b/src/pages/(loggedIn)/donation/DonorDetails.scss
@@ -129,7 +129,7 @@
 .donor-details__field input,
 .donor-select {
   padding: 0.75rem;
-  height: clamp(36px, 5vw, 40px);
+  // height: clamp(36px, 5vw, 40px);
   outline: none;
   font-weight: bold;
 }
