--- a/src/pages/(loggedIn)/coupons/CouponsHeader.scss
+++ b/src/pages/(loggedIn)/coupons/CouponsHeader.scss
@@ -1,6 +1,6 @@
 .coupons-header {
   display: flex;
-  justify-content: space-between;
+  gap: 20px;
   align-items: center;
   padding: 16px 24px;
 
