--- a/src/pages/(loggedIn)/BookRoomManagement/BookRoomManagementBed/BookRoomManagementBed.scss
+++ b/src/pages/(loggedIn)/BookRoomManagement/BookRoomManagementBed/BookRoomManagementBed.scss
@@ -3,6 +3,7 @@
   border-radius: 20px;
   width: 100%;
   overflow: hidden;
+  // height: 76%;
 
   .bed-grid {
     display: flex;
@@ -68,7 +69,7 @@
     }
 
     .bed-cell {
-      min-width: 90px;
+      min-width: 100px;
       height: 80px;
       border: 1px solid #ffd7b5;
       border-radius: 8px;
