--- a/src/pages/(loggedIn)/BookRoomManagement/BookRoomManagementBed/BookRoomManagementBed.scss
+++ b/src/pages/(loggedIn)/BookRoomManagement/BookRoomManagementBed/BookRoomManagementBed.scss
@@ -1,9 +1,9 @@
 .bed-management-container {
   background-color: #fff;
+  padding: 10px 20px;
   border-radius: 20px;
   width: 100%;
   overflow: hidden;
-  // height: 76%;
 
   .bed-grid {
     display: flex;
@@ -115,5 +115,32 @@
     width: 23px;
     height: 23px;
     margin: 0 6px;
+  }
+}
+
+.loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  min-height: 200px;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #3498db;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
   }
 }
