--- a/src/pages/(loggedIn)/BookRoomManagement/BookRoomManagementBed/BookRoomManagementBed.scss
+++ b/src/pages/(loggedIn)/BookRoomManagement/BookRoomManagementBed/BookRoomManagementBed.scss
@@ -75,6 +75,7 @@
       border-radius: 8px;
       margin: 5px;
       padding: 10px;
+      position: relative;
 
       .bed-group {
         display: flex;
@@ -85,6 +86,53 @@
           width: 23px;
           height: 23px;
           margin: 0 5px;
+        }
+      }
+
+      .custom-tooltip {
+        display: none;
+        position: absolute;
+        background: white;
+        border: 1px solid #ccc;
+        padding: 15px;
+        border-radius: 4px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        z-index: 1000;
+        min-width: 250px;
+        left: 105%;
+        top: 0;
+
+        h4 {
+          margin: 0 0 10px 0;
+          color: #333;
+          border-bottom: 1px solid #eee;
+          padding-bottom: 5px;
+        }
+
+        .guest-details {
+          margin-bottom: 15px;
+          padding-bottom: 10px;
+          border-bottom: 1px dashed #eee;
+
+          &:last-child {
+            margin-bottom: 0;
+            border-bottom: none;
+          }
+        }
+
+        p {
+          margin: 5px 0;
+          font-size: 0.9em;
+
+          strong {
+            color: #555;
+          }
+        }
+      }
+
+      &:hover {
+        .custom-tooltip {
+          display: block;
         }
       }
     }
@@ -143,4 +191,8 @@
   100% {
     transform: rotate(360deg);
   }
+}
+
+[data-tooltip="true"] {
+  cursor: pointer;
 }
