--- a/src/pages/(loggedIn)/BookRoom/BookRoomHeader/BookRoomHeader.scss
+++ b/src/pages/(loggedIn)/BookRoom/BookRoomHeader/BookRoomHeader.scss
@@ -150,3 +150,17 @@
     }
   }
 }
+
+.toggleGridView {
+  img {
+    padding: 8px;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: rgba(var(--primary-color-rgb), 0.1);
+    }
+  }
+}
