--- a/src/pages/(loggedIn)/Calendar/CalendarMainSection/CalendarMainSection.scss
+++ b/src/pages/(loggedIn)/Calendar/CalendarMainSection/CalendarMainSection.scss
@@ -64,3 +64,28 @@
     }
   }
 }
+
+.loader-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 600px;
+
+  .loader {
+    width: 48px;
+    height: 48px;
+    border: 3px solid #f3f3f3;
+    border-top: 3px solid #4f46e5;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+  }
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
