--- a/src/pages/(loggedIn)/dashboard/Dashboard.scss
+++ b/src/pages/(loggedIn)/dashboard/Dashboard.scss
@@ -152,3 +152,10 @@
     }
   }
 }
+
+.room-stats-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+  padding: 0 20px;
+}
