--- a/src/pages/applicationForm/applicationTabs/applicationDetails/ApplicationDetails.scss
+++ b/src/pages/applicationForm/applicationTabs/applicationDetails/ApplicationDetails.scss
@@ -903,7 +903,7 @@
 
   .selected-deeksha {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #515151;
     border-radius: 4px;
     cursor: pointer;
     background: white;
